# doc-rag

./: .env.example  .env.simple  ADVANCED_FEATURES.md  ANSWER_ADVANCED_CHUNKING.md  DOCLING_ENHANCEMENT_ANALYSIS.md  FEATURES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INSTALLATION.md  MARKDOWN_OPTIMIZATION_PLAN.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SETUP_FOR_COPILOT.md  SIMPLIFIED_VERSION.md  SKILLS_GUIDE.md  SUMMARY.md  USAGE.md  VERSION_COMPARISON.md  WHAT_IS_NEW_V2.md  create_zip.py  install_optimizations.sh  pyproject.toml  server.py  setup_simple.sh
.claude/: settings.local.json
config/: claude-desktop-config.json  vscode-settings.json
indexer/: __init__.py  build_index.py  doc_indexer.py  doc_indexer_simple.py  docling_serializers.py  image_ocr.py  incremental_indexer.py  link_extractor.py  table_extractor.py
search/: __init__.py  conversation_context.py  embedders.py  feedback_system.py  hybrid_chunker.py  hybrid_search.py  query_decomposer.py  reranker.py
skills/: README.md  deep-search.json  explain-topic.json  explore-docs.json  find-config.json  find-table.json  quick-answer.json  skills.json
tools/: context_builder.py  file_tools.py  search_tools.py  summarize_tools.py  table_tools.py
